// MacOS: brew install protobuf@3
// protoc --go_out=. message.proto

// syntax定义必须在第一行，否则不生效
syntax = "proto3";
package main;

import "google/protobuf/timestamp.proto";
// 指定RPC文件生成路径地址与包名
option go_package ="./;main";	// “;”分割，前路径，后包名（可选，默认路径名）

message SimplePerson {
	string name = 1;
	bool male = 2;
	repeated int32 scores = 3;
}

message PersonBase {
	int32 id = 1;
	string name = 2;
	string email = 3;
}

enum PhoneType {
	PHONE_TYPE_UNSPECIFIED = 0;
	PHONE_TYPE_MOBILE = 1;
	PHONE_TYPE_HOME = 2;
	PHONE_TYPE_WORK = 3;
}

message ComplexPerson {
	PersonBase base = 1;

	message PhoneNumber {
		string number = 1;
		PhoneType type = 2;
	}

	repeated PhoneNumber phones = 2;

	google.protobuf.Timestamp last_updated = 3;
}

// Our address book file is just one of these.
message AddressBook {
	repeated SimplePerson simple_people = 1;
	repeated ComplexPerson complex_people = 2;
}
